[package]
name = "copyrs"
description = "Crossplatform clipboard access"
keywords = ["clipboard"]
version = "0.1.0"
edition = "2021"

[features]
default = ["x11", "wayland"]
x11 = ["x11-clipboard"]
wayland = ["smithay-clipboard"]

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "3.0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc_id = "0.1"
objc-foundation = "0.1"

[target.'cfg(all(unix, not(any(target_os="macos", target_os="android", target_os="ios", target_os="emscripten"))))'.dependencies]
x11-clipboard = { version = "0.9.1", optional = true }
smithay-clipboard = { version = "0.7.0", optional = true }
