[package]
name = "copyrs"
version = "0.2.1"
edition = "2021"

license = "MIT"
readme = "README.md"
keywords = ["clipboard"]
description = "Crossplatform clipboard access"
repository = "https://github.com/Vildanio/copyrs"

[features]
default = ["x11"]
x11 = ["x11-clipboard"]
wayland = ["wl-clipboard-rs"]

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "3.0.2"

[target.'cfg(all(unix, not(any(target_os="macos", target_os="android", target_os="ios", target_os="emscripten"))))'.dependencies]
x11-clipboard = { version = "0.9.1", optional = true }
wl-clipboard-rs = { version = "0.8.1", optional = true }
